force-app/main/default/objects/ContractRecordTypeCS__c/ContractRecordTypeCS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ContractRecordTypeCS</label>
</CustomObject>