force-app/main/default/objects/ContractRecordTypeCS__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>