force-app/main/default/objects/ContractRecordTypeCS__c/fields/Contract_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_1__c</fullName>
    <label>Contract Category 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>