force-app/main/default/objects/ContractRecordTypeCS__c/fields/Contract_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_2__c</fullName>
    <label>Contract Category 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>