force-app/main/default/objects/ContractRecordTypeCS__c/fields/Contract_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group_c__c</fullName>
    <label>Contract_Group__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>