force-app/main/default/objects/ContractRecordTypeCS__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>