force-app/main/default/objects/ContractRecordTypeCS__c/fields/Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>Recordtype_Name__c</fullName>
    <label>Recordtype Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>